--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,1 +1,1 @@
-web: uvicorn app.main:app --host 0.0.0.0 --port $PORT --timeout-keep-alive 30 
+web: uvicorn app.main:app --host 0.0.0.0 --port $PORT 
